Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>How exciting to learn to code! I joined Flatiron School's Community-Powered Bootcamp to learn the Full Stack Web Development program. </p>
