--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>How exciting to learn to code! I joined Flatiron School's Community-Powered Bootcamp to learn the Full Stack Web Development program. </p>
+<p>Looking to get back to work after a 13-year career break. The journey starts here...  joining the Full Stack Web Development program by Flatiron School's Community-Powered Bootcamp.</p>
