Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Looking to return to work after a 13-year career break enjoying my time as a stay-at-home mother. The journey starts here...  joining the Full Stack Web Development program by Flatiron Schools' Community-Powered Bootcamp.</p>
+<p>Looking to return to work after a 13-year career break to be a stay-at-home mother. The journey starts here...  joining the Full Stack Web Development program by Flatiron Schools' Community-Powered Bootcamp.</p>
