--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Looking to return to work after many years of career break to be a stay-at-home mother. The journey starts here... by joining Flatiron School Online Bootcamp to learn the Full Stack Web Development program.</p>
+<p>Looking to return to work after a career break to be stay-at-home mother. The journey starts here... graduated from Flatiron School Full Stack Web Development program an d actively looking for a software engineering job!</p>
