--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Looking to return to work after a career break to be stay-at-home mother. The journey starts here... graduated from Flatiron School Full Stack Web Development program an d actively looking for a software engineering job!</p>
+<p>Excited to return to work after a career break from the corporate world to being a stay-at-home mother. The journey starts here. Learning new technology and graduated from Flatiron School's Full Stack Web Development program. Actively looking for a software engineering job.</p>
