Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Excited to return to work after a career break from Software Engineer job to being a stay-at-home mother. The journey starts here. Learning new technology and graduated from Flatiron School's Full Stack Web Development program. Actively looking to return to the Software Engineer role.</p>
+<p>The journey starts here. Learner of new technology and a graduate of Flatiron School's Full Stack Web Development program. Actively looking for a  Software Engineer job.</p>
