Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>The journey starts here. Learner of new technologies and a graduate of Flatiron School's Full Stack Web Development program. Actively looking for a  Software Engineer job.</p>
+<p>The journey starts here. Learner of new technologies and a graduate of Flatiron School. Actively seeking entry-level Full Stack Web Development opportunity.</p>
